--- a/Werkstoffe.tex
+++ b/Werkstoffe.tex
@@ -212,7 +212,7 @@ $\int\limits_{\text{Volumen}}^{}{\Psi^* \Psi \diff r'} = 1$ \qquad $\Ra C_i = \s
 
 	\cookbox{Herleitung der Schrödingergleichung}{
 	\item Aus De-Broglie-Beziehungen: 
-		$\omega = \frac{\hbar^2}{2m} k^2 \lra \hbar \omega = \frac{\hbar^2}{2m} k^2$
+		$\omega = \frac{\hbar}{2m} k^2 \lra \hbar \omega = \frac{\hbar^2}{2m} k^2$
 		\item Multipliziere beide Seiten mit $\Psi$ und ersetze $\omega \ra \frac{\partial}{\partial t}$ sowie $k^2 \ra \div \grad$ \quad
 			es folgt: $-\i \hbar \frac{\partial}{\partial t} \Psi(\vec{r},t) = - \frac{\hbar^2}{2m} \vec{\Delta} \Psi(\vec{r},t)$
 		\item In einem Kraftfeld $\vec{F}(\vec{r},t)$ mit $\vec{F}(\vec{r},t) = - \grad V(\vec{r},t)$ gilt:\\
