Energieverteilung Vorzeichen korrigiert

--- a/Werkstoffe.tex
+++ b/Werkstoffe.tex
@@ -809,7 +809,7 @@ Seebeck Koeffizient:\\
 	$\nu = \frac{E p}{k_B T}$
 	Energie eines Dipols: $U(\theta) = -\vec p \vec E = -pE \cdot \cos(\theta)$
 	 
-	Energieverteilung $w(\theta) = \exp(\frac{U(\theta)}{k_B T}$
+	Energieverteilung $w(\theta) = \exp(-\frac{U(\theta)}{k_B T}$
 	
 	$\ol{\cos(\theta)} = \frac{\ol{w(\theta) \cos(\theta)}}{\ol{w(\theta)}}$
 	
