corrected to capital T for temperature

--- a/Werkstoffe.tex
+++ b/Werkstoffe.tex
@@ -527,8 +527,8 @@ Mittlere freie Weglänge $l = v \tau$ \qquad\quad $C_{\text{el}} \approx 6n k_B^
 
 \sectionbox{
 		\subsection{Thermische Ausdehnung}
-	Ausdehnungskoeffizient $\alpha = \frac{\beta}{3} = \frac{\Delta l}{l} \cdot \frac{1}{\Delta t}$\\
-	Volumenänderung: $\frac{\Delta V}{V_0} = 3\alpha \Delta T = \beta \Delta t$\\
+	Ausdehnungskoeffizient $\alpha = \frac{\beta}{3} = \frac{\Delta l}{l} \cdot \frac{1}{\Delta T}$\\
+	Volumenänderung: $\frac{\Delta V}{V_0} = 3\alpha \Delta T = \beta \Delta T$\\
 	\\
 	Grüneisenregel für Metalle: $\alpha \propto \frac{1}{T_S}$ \qquad Schmeltemperatur $T_S$\\
 }
