Neue Diagramme hinzugefügt

--- a/Werkstoffe.tex
+++ b/Werkstoffe.tex
@@ -932,6 +932,8 @@ $\vec m = I A$ ist antiparallel zu $\vec L$
 	Abstandsabhängigkeit interatomarer Kräfte & 59 \\ 
 	Spannungs/Dehnungsdiagramm & 63 \\
 	Festigkeit bei wechselnder Belastung & 67 \\ 
+	Dotierkonzentrationen & 126 \\
+	Hystereskurve eines Ferroelektikums & 149\\
 	\cbrule
 	\end{tabular*}
 }	
